fix dark mode color issues

--- a/frontend/src/assets/code_editor.scss
+++ b/frontend/src/assets/code_editor.scss
@@ -483,6 +483,11 @@
     .info-panel {
       border-left: 1px solid #303235;
 
+      .file {
+        color: #F7F8F8;
+        border-bottom: 1px solid #303235;
+      }
+
       .header-menu {
         border-bottom: 1px solid #303235;
 
