--- a/frontend/src/assets/editor_aside.scss
+++ b/frontend/src/assets/editor_aside.scss
@@ -152,7 +152,7 @@ aside#editor-aside {
           margin-right: 10px;
         }
 
-        &:hover, &:active {
+        &:hover, &.active {
           background: #F1F3F8;
           border-radius: 5px;
         }
@@ -301,7 +301,7 @@ aside#editor-aside {
       &.accordion {
         .section-title {
           color: #F7F8F8;
-          &:hover, &:active {
+          &:hover, &.active {
             background: #2D2E36;
           }
         }
